--- a/CSS/styles-con.css
+++ b/CSS/styles-con.css
@@ -23,10 +23,10 @@ h1 {
     font-weight: 700;
     margin-bottom: 10px;
 }
-.container {
+.cont-container {
     margin-bottom: 30px;
 }
-.container a {
+.cont-container a {
     text-decoration: none;
     color: black;
 }
