--- a/CSS/styles-vac.css
+++ b/CSS/styles-vac.css
@@ -2,4 +2,52 @@
     display: block;
     position: relative;
     width: 80%;
+    margin: 0 auto;
+}
+h1 {
+    color: gray;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+}
+.vac-container {
+    display: flex;
+    position: relative;
+}
+h3 {
+    color: #1780C3;
+    margin-bottom: 30px;
+}
+.all-vac {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: 30%;
+    font-size: 15px;
+}
+.all-vac a {
+    text-decoration: none;
+    color: #000;
+    margin-bottom: 15px;
+}
+.vac {
+    display: block;
+    position: relative;
+    margin-top: 30px;
+    width: 80%;
+}
+.vac-button {
+    display: block;
+    position: relative;
+    height: fit-content;
+    border-bottom: 2px solid #1780C3;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.vac-button a {
+    text-decoration: none;
+    color: #616161;
+    font-size: 30px;
 }
