--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -55,7 +55,7 @@
     display: flex;
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 600px;
     justify-content: center;
     align-items: center;
     background: url(../img/bgmain.jpg);
@@ -104,6 +104,32 @@
     margin: 50px;
     font-size: 28px;
     text-align: center;
+}
+.container {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+.task-cont h3 {
+    color: gray;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.task-cont {
+    display: block;
+    position: relative;
+    width: 40%;
+    border: 3px solid #1780C3;
+    border-radius: 30px;
+    padding: 10px 10px 10px 30px; 
+}
+.task-cont li {
+    margin-bottom: 10px;
 }
 .footer {
     background: #444e57;
